// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComicsList Component should render ComicsList correctly 1`] = `
<div>
  <ul
    className="pagination center-align"
  >
    <li>
      <a
        href="/comics/letter/a"
        onClick={[Function]}
      >
        a
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/b"
        onClick={[Function]}
      >
        b
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/c"
        onClick={[Function]}
      >
        c
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/d"
        onClick={[Function]}
      >
        d
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/e"
        onClick={[Function]}
      >
        e
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/f"
        onClick={[Function]}
      >
        f
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/g"
        onClick={[Function]}
      >
        g
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/h"
        onClick={[Function]}
      >
        h
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/i"
        onClick={[Function]}
      >
        i
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/j"
        onClick={[Function]}
      >
        j
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/k"
        onClick={[Function]}
      >
        k
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/l"
        onClick={[Function]}
      >
        l
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/m"
        onClick={[Function]}
      >
        m
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/n"
        onClick={[Function]}
      >
        n
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/o"
        onClick={[Function]}
      >
        o
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/p"
        onClick={[Function]}
      >
        p
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/q"
        onClick={[Function]}
      >
        q
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/r"
        onClick={[Function]}
      >
        r
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/s"
        onClick={[Function]}
      >
        s
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/t"
        onClick={[Function]}
      >
        t
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/u"
        onClick={[Function]}
      >
        u
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/v"
        onClick={[Function]}
      >
        v
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/w"
        onClick={[Function]}
      >
        w
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/x"
        onClick={[Function]}
      >
        x
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/y"
        onClick={[Function]}
      >
        y
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/z"
        onClick={[Function]}
      >
        z
      </a>
    </li>
  </ul>
  <div
    className="row card-container"
  />
</div>
`;

exports[`ComicsList Component should render ComicsList with components 1`] = `
<div>
  <ul
    className="pagination center-align"
  >
    <li>
      <a
        href="/comics/letter/a"
        onClick={[Function]}
      >
        a
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/b"
        onClick={[Function]}
      >
        b
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/c"
        onClick={[Function]}
      >
        c
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/d"
        onClick={[Function]}
      >
        d
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/e"
        onClick={[Function]}
      >
        e
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/f"
        onClick={[Function]}
      >
        f
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/g"
        onClick={[Function]}
      >
        g
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/h"
        onClick={[Function]}
      >
        h
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/i"
        onClick={[Function]}
      >
        i
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/j"
        onClick={[Function]}
      >
        j
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/k"
        onClick={[Function]}
      >
        k
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/l"
        onClick={[Function]}
      >
        l
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/m"
        onClick={[Function]}
      >
        m
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/n"
        onClick={[Function]}
      >
        n
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/o"
        onClick={[Function]}
      >
        o
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/p"
        onClick={[Function]}
      >
        p
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/q"
        onClick={[Function]}
      >
        q
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/r"
        onClick={[Function]}
      >
        r
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/s"
        onClick={[Function]}
      >
        s
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/t"
        onClick={[Function]}
      >
        t
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/u"
        onClick={[Function]}
      >
        u
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/v"
        onClick={[Function]}
      >
        v
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/w"
        onClick={[Function]}
      >
        w
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/x"
        onClick={[Function]}
      >
        x
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/y"
        onClick={[Function]}
      >
        y
      </a>
    </li>
    <li>
      <a
        href="/comics/letter/z"
        onClick={[Function]}
      >
        z
      </a>
    </li>
  </ul>
  <div
    className="row card-container"
  >
    <div
      className="card"
    >
      <div
        className="card-image"
      >
        <img
          alt=""
          src="path.jpg"
        />
        <a
          className="btn-floating halfway-fab waves-effect waves-light red"
          onClick={[Function]}
        >
          <i
            className="material-icons"
          >
            add
          </i>
        </a>
      </div>
      <div
        className="card-content"
      >
        <span
          className="card-title"
        >
          comic
        </span>
        <p
          dangerouslySetInnerHTML={
            Object {
              "__html": "text",
            }
          }
        />
      </div>
      <div
        className="card-action"
      >
        <a
          href="/comics/id/undefined"
          onClick={[Function]}
        >
          En voir plus
        </a>
      </div>
    </div>
  </div>
</div>
`;
